# H743_Camera_CMake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  todo.md
Core/: .gitignore  .mxproject  CMakeLists.txt  Camera.ioc  STM32H743XX_FLASH.ld
Core/Conflict-Code/Core/Src/: dcmi.c
Core/Core/Inc/: FreeRTOSConfig.h  ansi.h  debugger.h  fmc.h  jpeg_utils_conf.h  ltdc.h  main.h  my_heap_manage.h  prj_header.hpp  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h
Core/Core/Src/: Camera_1_bit.c  dcmi.c  dma.c  dma2d.c  fmc.c  freertos.c  gpio.c  jpeg.c  ltdc.c  main.c  mdma.c  rtc.c  sdmmc.c  sdram_drl.c  stm32h7xx_it.c  syscalls.c  sysmem.c  system_stm32h7xx.c  tim.c
Core/Core/lvgl/examples/porting/: lv_port_disp.c  lv_port_fs.c  lv_port_indev.c
Core/Core/soft_iic/: soft_iic.cpp  soft_iic.hpp  soft_sccb.cpp  soft_sccb.hpp
Core/Core/trace/Config/: trcConfig.h  trcKernelPortConfig.h
Core/Core/trace/streamport/: SEGGER_RTT_printf.c
Core/Core/user-code/: bsp_fatfs_callback.cpp  camera_capture_func.cpp  camera_declare.hpp  camera_hal_init.cpp  camera_isr.cpp  camera_module_init.cpp  camera_task_routine.cpp  cpp_public.hpp  file_explorer.cpp  file_explorer.hpp  initial_task_routine.cpp  lcd_touch.cpp  lcd_touch.hpp  memory_pool.cpp  memory_pool.hpp  memory_pool_allocator.hpp  memory_pool_block.cpp  memory_pool_block.hpp  my_heap_manage.c  path_func.cpp  path_func.hpp  pcf8574.cpp  pcf8574.hpp  photo_folder_setting.c  std_new_delete.cpp  timer2_delay.cpp  timer2_delay.hpp  timer_delay.cpp  timer_delay.hpp  touch_sence_routine.cpp
Core/Core/user-code/my_ov5640/: ov5640.cpp  ov5640.hpp  ov5640_regs.hpp  ov5640_settings.hpp  sensor.cpp
Core/FATFS/App/: fatfs.c
Core/LIBJPEG/App/: libjpeg.c  libjpeg.h
Core/SEGGER-RTT/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c
Core/Utilities/JPEG/: jpeg_utils.c  jpeg_utils.h  jpeg_utils_conf_template.h
Core/cmake/stm32cubemx/: CMakeLists.txt
LVGL/: CMakeLists.txt  lv_conf.h
LVGL/lvgl/examples/porting/: lv_port_disp.c  lv_port_fs.c  lv_port_indev.c
LVGL/lvgl/src/draw/renesas/dave2d/: lv_draw_dave2d.c
LVGL/lvgl/src/drivers/display/renesas_glcdc/: lv_renesas_glcdc.c
cmake/: gcc-arm-none-eabi.cmake
